# hacking-ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: build.sh
src/hacking_ai/: cli.py
src/hacking_ai/core/: agent.py  openai_client.py
src/hacking_ai/tools/: docs.py  shell.py  web.py
wsra/: cli.py  models.py  repl.py
wsra/core/: ai.py  ai_loop.py  executor.py  guardrails.py  scope.py  session.py
wsra/vector/: __init__.py  knowledge.py  store.py
