[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hacking-ai"
version = "0.1.0"
description = "Ethical security research assistant CLI with agent flow, safe command runner, and docs summarizer"
authors = [
  { name = "Hacking AI" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "requests>=2.32.3",
  "beautifulsoup4>=4.12.3"
]

[project.urls]
Homepage = "https://example.com"

[project.scripts]
hacking-ai = "hacking_ai.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.10.0",
]