[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wsra"
version = "0.1.0"
description = "White-Hat Security Research Assistant (safe-by-design, read-only first)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "You", email = "you@example.com" }]
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12.3",
    "rich>=13.7.1",
    "pydantic>=2.8.2",
    "pyyaml>=6.0.2",
    "chromadb>=0.5.3",
    "sentence-transformers>=2.2.2",
    "openai>=1.46.0",
    "keyring>=24.3.1",
]

[project.scripts]
wsra = "wsra.cli:app"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true

[tool.setuptools.packages.find]
where = ["."]
include = ["wsra*"]
